--- a/project/index.html
+++ b/project/index.html
@@ -9,25 +9,22 @@
   </head>
 
   <body>
-    <div class="wrapper">
-      <header>
-        <h1><span>Jeopardy!</span></h1>
-      </header>
-      <img
-        src="https://www.dropbox.com/s/3u2rf43qw5e9ri4/jeopardy.jpg?raw=1"
-        width="70%" 
-      />
-      <br>
-      <button><a href="round1.html"><b>Play!</b></a></button>
-   </div>
-   
-    <div>
+    <div id="page-container">
+      <div id="content-wrap">
+        <header>
+          <h1><span>Jeopardy!</span></h1>
+        </header>
+        <img
+          src="https://www.dropbox.com/s/3u2rf43qw5e9ri4/jeopardy.jpg?raw=1"
+          width="70%"
+        />
+        <br />
+        <button class="play">
+          <a href="round1.html"><b>Play!</b></a>
+        </button>
+      </div>
+
       <footer>Site Info</footer>
-</div>
-
-
-
- 
-
+    </div>
   </body>
 </html>
