frozen noodle and grid project

--- a/challenges/frozen-noodle/index.html
+++ b/challenges/frozen-noodle/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frozen Noodles</title>
+    <title>Frozen Noodle</title>
     <link rel="stylesheet" href="index.css" />
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
-</style>
+      @import url("https://fonts.googleapis.com/css2?family=Antonio:wght@600&display=swap");
+    </style>
   </head>
   <body>
     <!--  Header Section -->
@@ -16,6 +16,7 @@
       <div class="headertextgroup">
         <h1 class="headertext">Frozen</h1>
         <h1 class="headertext">Noodle</h1>
+        <button class="btn-primary btn-lg btn-100">JOIN NEWSLETTER</button>
       </div>
       <!-- this will be image column -->
       <div><img
@@ -26,5 +27,32 @@
       </div>
     </div>
     <!-- Product Section -->
+    <div class="wrapper-food-display">
+      <div class="food-display">
+        <h2>Noodle Rama</h2>
+        <img src="https://picsum.photos/400" alt="Noodle 1">
+<h3> $24.00</h3>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit laborum perferendis minus iste debitis et rem velit quas voluptas vel.</p>
+<button class="btn btn-primary btn-100"> Add to Cart</button>
+      </div>
+      <!-- product two -->
+    <div class="food-display">
+        <h2>Noodle Rama</h2>
+        <img src="https://picsum.photos/401" alt="Noodle 1">
+<h3> $24.00</h3>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit laborum perferendis minus iste debitis et rem velit quas voluptas vel.</p>
+<button class="btn btn-primary btn-100"> Add to Cart</button>
+      </div>
+      <!-- product 3 -->
+        <div class="food-display">
+        <h2>Noodle Rama</h2>
+        <img src="https://picsum.photos/402" alt="Noodle 1">
+<h3> $24.00</h3>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit laborum perferendis minus iste debitis et rem velit quas voluptas vel.</p>
+<button class="btn btn-primary btn-100"> Add to Cart</button>
+      </div>
+
+    </div>
+  
   </body>
 </html>
