--- a/project/round1.html
+++ b/project/round1.html
@@ -54,14 +54,16 @@
     <div class="box">1000</div>
      <div class="box">1000</div>
    </div>
-
+<!-- input box -->
       <div id=input></div><input type="text" id="input" placeholder= "Your answer here"> 
       <br>
+      <!-- player scores and buttons  -->
           <p><span>Player 1 Score: 0</span> </p>
     <button><b>Guess!</b></button>
     <button><b>Pass!</b></button>
     <p><span>Player 2 Score: 0 </span></p>
    <br>
+   <!-- on wire frame this button is to the right -->
     <button class="right"><a href="round2.html"><b>Next Round!</b></a></button>
 
      
