--- a/project/index.html
+++ b/project/index.html
@@ -11,20 +11,24 @@
   <body>
     <div id="page-container">
       <div id="content-wrap">
+        <!-- top header -->
         <header>
           <h1><span>Jeopardy!</span></h1>
         </header>
+        <!-- image of host alex -->
         <img
           src="https://www.dropbox.com/s/3u2rf43qw5e9ri4/jeopardy.jpg?raw=1"
           width="70%"
         />
-        <br />
+        <br /> 
+        <!-- check to see if this is doing anything  -->
+        <!-- play button -->
         <button class="play">
           <a href="round1.html"><b>Play!</b></a>
         </button>
       </div>
-
-      <footer>Site Info</footer>
+<!-- footer -->
+      <footer><h5><span id="footer">Site Info</span></h5></footer>
     </div>
   </body>
 </html>
