--- a/project/index.html
+++ b/project/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="page-container">
       <div id="content-wrap">
+           <!-- ^ creating a space below the content for the footer -->
         <!-- top header -->
         <header>
           <h1><span>Jeopardy!</span></h1>
@@ -28,7 +29,7 @@
         </button>
       </div>
 <!-- footer -->
-      <footer><h5><span id="footer">Site Info</span></h5></footer>
+       <footer><h5><span>Product of Huessy LLC</span></h5></footer>
     </div>
   </body>
 </html>
