jeopardy end of friday

--- a/project/flex.html
+++ b/project/flex.html
@@ -27,3 +27,43 @@ footer
 
 </body>
 </html>
+
+<!-- grid stuff 
+ </div>
+        <div class="grid final-category">All About Rob VanArsdal</div>
+        <div class="grid final-question">
+          How many children (including step children) does Rob VanArsdal have?
+        </div>
+        <div class="grid largeimage">
+          <img
+            src="https://www.dropbox.com/s/hkrlirwhf4e8rp0/Screen%20Shot%202022-11-16%20at%209.02.07%20PM.png?raw=1"
+          />
+        </div>
+
+        <div class="box image1">
+          <img
+            src="https://www.dropbox.com/s/okaxh1jub5h07qc/Screen%20Shot%202022-11-16%20at%209.05.59%20PM.png?raw=1"
+          />
+        </div>
+        <div class="box image2">
+          <img
+            src="https://www.dropbox.com/s/kt8j04jqqbey2ls/Screen%20Shot%202022-11-13%20at%204.30.01%20PM.png?raw=1"
+          />
+        </div>
+        <div class="box image3">
+          <img
+            src="https://www.dropbox.com/s/e6crvoy7j2n7w5y/Screen%20Shot%202022-11-13%20at%204.30.28%20PM.png?raw=1"
+          />
+        </div>
+      </div>
+
+      <!-- footer -->
+      <div class="footer">
+        <footer>
+          <!-- adding background to footer so it doesn't stretch across the entire page -->
+          <h5><span>Product of Huessy LLC</span></h5>
+        </footer>
+      </div>
+    </div>
+  </body>
+</html> -->
