--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,7 @@
            <!-- ^ creating a space below the content for the footer -->
         <!-- top header -->
         <header>
-          <h1><span>Jeopardy!</span></h1>
+          <h1 style="font-family:'jeopardy';"><span>Jeopardy!</span></h1>
         </header>
         <!-- image of host alex -->
         <img
@@ -29,7 +29,12 @@
         </button>
       </div>
 <!-- footer -->
-       <footer><h5><span>Product of Huessy LLC</span></h5></footer>
+          <div class="footer">
+      <footer>
+        <!-- adding background to footer so it doesn't stretch across the entire page -->
+      <h5><span>Product of Huessy LLC</span></h5> 
+    </footer>
+      </div>
     </div>
   </body>
 </html>
