--- a/project/round1.html
+++ b/project/round1.html
@@ -25,36 +25,36 @@
     <div class="box">Mythology</div>
     <div class="box">History</div>
     <div class="box">General</div>
+    <div class="box">100</div>
+    <div class="box">100</div>
+    <div class="box">100</div>
+    <div class="box">100</div>
+    <div class="box">100</div>
+    <div class="box">100</div>
     <div class="box">200</div>
     <div class="box">200</div>
     <div class="box">200</div>
     <div class="box">200</div>
     <div class="box">200</div>
     <div class="box">200</div>
+     <div class="box">300</div>
+     <div class="box">300</div>
+     <div class="box">300</div>
+     <div class="box">300</div>
+     <div class="box">300</div>
+     <div class="box">300</div>
     <div class="box">400</div>
     <div class="box">400</div>
     <div class="box">400</div>
     <div class="box">400</div>
     <div class="box">400</div>
     <div class="box">400</div>
-     <div class="box">600</div>
-     <div class="box">600</div>
-     <div class="box">600</div>
-     <div class="box">600</div>
-     <div class="box">600</div>
-     <div class="box">600</div>
-    <div class="box">800</div>
-    <div class="box">800</div>
-    <div class="box">800</div>
-    <div class="box">800</div>
-    <div class="box">800</div>
-    <div class="box">800</div>
-    <div class="box">1000</div>
-    <div class="box">1000</div>
-    <div class="box">1000</div>
-    <div class="box">1000</div>
-    <div class="box">1000</div>
-     <div class="box">1000</div>
+    <div class="box">500</div>
+    <div class="box">500</div>
+    <div class="box">500</div>
+    <div class="box">500</div>
+    <div class="box">500</div>
+     <div class="box">500</div>
    </div>
    
 <!-- input box -->
@@ -77,14 +77,16 @@
     </div>
    <!-- <br> -->
    <!-- on wire frame this button is to the right -->
+   <div class="nextround">
     <button class="right"><a href="round2.html"><b>Next Round!</b></a></button>
-
+</div>
      
      </div>
      <!-- footer -->
-     <!-- adding background to footer so it doesn't stretch across the entire page -->
+     
      <div class="footer">
       <footer>
+        <!-- adding background to footer so it doesn't stretch across the entire page -->
       <h5><span>Product of Huessy LLC</span></h5> 
     </footer>
       </div>
