--- a/project/final.html
+++ b/project/final.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <div id="page-container">
-      <div id="content-wrap">
+    <div class="page-container">
+      <div class="content-wrap final">
         <!-- ^ creating a space below the content for the footer so the footer doesn't overlap material-->
         <header>
           <h1 style="font-family: 'jeopardy'"><span> Final Round </span></h1>
@@ -21,7 +21,7 @@
             <h2>All about Rob VanArsdal</h2>
           </div>
           <div class="final-question"><p><span>
-            How many children (including step children)<br> does Rob VanArsdal have?
+            How many children (including stepchildren)<br> does Rob VanArsdal have?
           </span></p></div> -->
           <div class="bet">
             <input type="text" placeholder="Point bet amount" />
@@ -43,5 +43,8 @@
         </footer>
       </div>
     </div>
+    <!-- Do not change the script source. Allows import/export to work. -->
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
+  
