--- a/project/index.html
+++ b/project/index.html
@@ -9,32 +9,34 @@
   </head>
 
   <body>
-    <div id="page-container">
-      <div id="content-wrap">
-           <!-- ^ creating a space below the content for the footer -->
+    <div class="page-container">
+      <div class="content-wrap index">
+        <!-- ^ creating a space below the content for the footer -->
         <!-- top header -->
         <header>
-          <h1 style="font-family:'jeopardy';"><span>Jeopardy!</span></h1>
+          <h1 style="font-family: 'jeopardy'"><span>Jeopardy!</span></h1>
         </header>
         <!-- image of host alex -->
         <img
           src="https://www.dropbox.com/s/3u2rf43qw5e9ri4/jeopardy.jpg?raw=1"
           width="70%"
         />
-        <br /> 
+        <br />
         <!-- check to see if this is doing anything  -->
         <!-- play button -->
         <button class="play">
           <a href="round1.html"><b>Play!</b></a>
         </button>
       </div>
-<!-- footer -->
-          <div class="footer">
-      <footer>
-        <!-- adding background to footer so it doesn't stretch across the entire page -->
-      <h5><span>Product of Huessy LLC</span></h5> 
-    </footer>
+      <!-- footer -->
+      <div class="footer">
+        <footer>
+          <!-- adding background to footer so it doesn't stretch across the entire page -->
+          <h5><span>Product of Huessy LLC</span></h5>
+        </footer>
       </div>
     </div>
+  <!-- Do not change the script source. Allows import/export to work. -->
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
