--- a/project/round1.html
+++ b/project/round1.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <div id="page-container">
-        <div id="content-wrap">
+    <div class="page-container">
+        <div class="content-wrap">
           <!-- ^ creating a space below the content for the footer -->
       <header>
         <h1 class="round"><span> Round One </span></h1>
@@ -75,8 +75,9 @@
     <button><b>Pass!</b></button>
     <p><span>Player 2 Score: 0 </span></p>
     </div>
-   <!-- <br> -->
+  
    <!-- on wire frame this button is to the right -->
+   <!-- flex boxing this right -->
    <div class="nextround">
     <button class="right"><a href="round2.html"><b>Next Round!</b></a></button>
 </div>
@@ -92,12 +93,8 @@
       </div>
 
       </div>
-      </body>
-
-
-
-
-    
-
+       <!-- Do not change the script source. Allows import/export to work. -->
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
+     
